--- a/LinkDev.IKEA.DAL/LinkDev.IKEA.DAL.csproj
+++ b/LinkDev.IKEA.DAL/LinkDev.IKEA.DAL.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Entities\" />
-    <Folder Include="Common\" />
+    <Folder Include="Common\Enums\" />
     <Folder Include="Concrete\" />
+    <Folder Include="Entities\" />
     <Folder Include="Persistance\Data\Migrations\" />
     <Folder Include="Persistance\Data\Configurations\" />
     <Folder Include="Persistance\Data\DataSeeds\" />
