--- a/LinkDev.IKEA.PL/appsettings.json
+++ b/LinkDev.IKEA.PL/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.,Database=IKEA;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True;"
+  }
 
 }
