Dbinitializer(ApplyMigrations and Data Seed)

--- a/LinkDev.IKEA.PL/appsettings.json
+++ b/LinkDev.IKEA.PL/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.,Database=IKEA;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=.;Database=IKEA;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True;"
   }
 
 }
